docker-desktop/ai-host/k8s/shared/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    version: v1.0 
    istio-injection: enabled
